Fix an issue that .PDF extension is not automatically opened by system viewer

We should make the comparison case insensitive.

BUG=725891

Change-Id: I6e50bc5d08eb55f0a7b0fbbac805a9d7ac453917
Reviewed-on: https://chromium-review.googlesource.com/596417
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492558}
Former-commit-id: 8e05b89097468ba30f4258bb0152ce4844280ed1